# rust-advanced

./: Cargo.toml
debug_info/: Cargo.toml
debug_info/src/: lib.rs
doc/: FnMut.md  TAG3.md  favorites_12.01.24.html  lifetimes.rs  main_johan.rs
gui/: Cargo.toml
gui/src/: crud.rs
gui/ui/: sql.slint
model/: Cargo.toml
model/src/: lib.rs
slintext/: Cargo.toml
slintext/src/: bijective.rs  lib.rs  sqlmdl.rs  sqltmdl.rs
src/: bijective.rs  crud.rs  db.rs  main.rs  pets.rs  sqlmdl.rs
ui/: crud.slint  sql.slint
