workspace = { members = ["debug_info"] }
[package]
name = "rustkurs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_info = { path = "debug_info" }
futures = "0.3.30"
primal = "0.3.2"
tokio = { version = "1.35.1", features = ["full"] }
