[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_info = { path = "../debug_info" }
slintext = { path = "../slintext" }
model = { path = "../model" }
slint = "1.4"

[build-dependencies]
slint-build = "1.4"
