[package]
name = "slintext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde_rusqlite = "0.34.0"
slint = "1.3.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
